2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Remove unwanted/obsolete 'ddd' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  [Bug 2446711]: Remove 'allpatch' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Use 'rpmbuild', not 'rpm' [Bug 2537626].

2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Cross-compile support for Win and UNIX (backported)
	* unix/configure: (autoconf-2.59)
	* win/tcl.m4:
	* win/configure.in:
	* win/configure: (autoconf-2.59)

2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4: Better building on OpenBSD.
	* unix/configure: (autoconf-2.59)

2010-12-10 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclIO.c: [backport] Make sure [fcopy -size ... -command ...] always
	* tests/io.test:   calls the callback asynchronously, even for size zero.

2010-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtil.c (TclReToGlob): add extra check for multiple
	inner *s that leads to poor recursive glob matching, defer to
	original RE instead.  tclbench RE var backtrack.

2010-12-01  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclStrToD.c (SetPrecisionLimits, TclDoubleDigits):
	Added meaningless initialization of 'i', 'ilim' and 'ilim1'
	to silence warnings from the C compiler about possible use of
	uninitialized variables, Added a panic to the 'switch' that
	assigns them, to assert that the 'default' case is impossible.
	[Bug 3124675]

2010-11-30  Andreas Kupries  <andreask@activestate.com>

	* generic/tclInt.decls: Backport of Kevin B. Kenny's work on
	* generic/tclInt.h: the Tcl Head, with help from Jeff Hobbs.
	* generic/tclStrToD.c:
	* generic/tclTest.c:
	* generic/tclTomMath.decls:
	* generic/tclUtil.c:
	* tests/util.test:
	* unix/Makefile.in:
	* win/Makefile.in:
	* win/makefile.vc: Rewrite of Tcl_PrintDouble and TclDoubleDigits